fix white space tooltip text

--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -13995,6 +13995,7 @@ fieldset:disabled .btn {
   left: 50%;
   transform: translateY(38px) translateX(-50%);
   z-index: 1;
+  white-space: nowrap;
 }
 
 .btn-violet:hover .tooltiptext-bottom,
