--- a/resources/sass/utilities.scss
+++ b/resources/sass/utilities.scss
@@ -91,6 +91,7 @@
         left: 50%;
         transform: translateY(38px) translateX(-50%);
         z-index: 1;
+        white-space: nowrap;
     }
 
     &:hover {
